new title bg color

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .proj-title{
     /* background-color: #00b894; */
-    background-color: #00cec9;
+    background-color: hsl(168, 74%, 38%);
     padding: 1rem;
     font-size: large;
     font-weight: 600;
